--- a/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn-style.css
@@ -22,38 +22,35 @@
     padding: 1em;
 }
 
-.tool_description{
-    display: flex;
-
-}
-
-.tool_description h1{
-    flex-direction: column;
-}
-
-.tool_logo{
-    width: 300px;
-    height: 300px;
-    float: right;
-    margin-top: 1em;
-}
-
-.button_history{
-    position: relative;
-    left: 70%;
-    padding: 2em;
-    margin-top: 3em;
-    font-size: 10pt;
+.staff_section{
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2em;
     font-family: 'Montserrat', sans-serif;
-    color: white;
-    background:#14489f;
-
+    
 }
 
-.button_history:hover, .button_history:active{
-    color: black;
-    background:#82b6ff;
+.staff_section p{
+    padding-left: 8.5em;
+}
 
+.staff_img{
+    max-width: 80%; 
+    height: auto;
+    padding: 5%;
+    margin-left: 2em;
+    
+}
+
+div a{
+    text-decoration: none;
+    color: black;
+}
+
+.staff_section > div:hover, .staff_section > div:active{
+    color: black;
+    background: #BFC0C0;
 }
 
 .navigation{
