--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -21,16 +21,17 @@
     padding: 1em;
 }
 
-.tool_description{
+.user_description{
     display: flex;
 
 }
 
-.tool_description h1{
+.user_description h1{
     flex-direction: column;
+    width: auto;
 }
 
-.tool_logo{
+.user_logo{
     width: 300px;
     height: 300px;
     float: right;
