--- a/Lokaverkefni_2019/vefsiða/index-style.css
+++ b/Lokaverkefni_2019/vefsiða/index-style.css
@@ -23,7 +23,7 @@
     margin-top: 0.2em;
 }
 
-.tool_section{
+.tooll_section{
     display: flex;
     background: lightgrey;
     color: white;
@@ -37,6 +37,22 @@
     padding-bottom: 2%;
     padding-left: 1%;
 }
+.tool_section{
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 2em;
+    font-family: 'Montserrat', sans-serif;
+    padding: 0;
+}
+
+.tool_section li{
+    list-style-type: none;
+    padding: 1em;
+    font-size: 16pt;
+    background: lightgray;
+    color: black;
+}
 
 .tool_section img{
     max-width:10%;
@@ -48,7 +64,7 @@ div a{
     color: black;
 }
 
-.main > div:hover, .main > div:active{
+.tool_section > li:hover, .tool_section > li:active{
     color: black;
     background: #BFC0C0;
 }
