--- a/Lokaverkefni_2019/vefsiða/index-style.css
+++ b/Lokaverkefni_2019/vefsiða/index-style.css
@@ -20,7 +20,15 @@
     font-size: 30pt;
     font-family: 'Montserrat', sans-serif;
     padding: 1em;
-    margin-top: 0.2em;
+}
+
+.main{
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    max-width: 48em;
+    width: 100%;
+    height: 76%;
 }
 
 .tool_section{
