--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 .container {
     height: 100%;
     max-width: 50em;
@@ -23,7 +24,7 @@
 
 .user_description{
     display: flex;
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 .user_description h1{
@@ -57,13 +58,30 @@
 }
 
 .navigation{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 1px;
     font-family: 'Montserrat', sans-serif;
-    bottom: 2%;
+    background:#333;
+    text-align: center;
     position: fixed;
-    width: fill;
+    bottom: 1em;
+    width: 100%;
+    max-width: 48em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.navigation ul{
+    padding: 0;
+    margin: 0;
+}
+
+.navigation ul > li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 5px 20px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    padding: 1.8em 2em;
 }
 
 .navigation a{
@@ -71,14 +89,7 @@
     text-decoration: none;
 }
 
-.navigation > div{
-    background: #333;
-    color: white;
-    padding: 1.84em;
-    text-align: center;
-}
-
-.navigation > div:hover, .navigation > div:active{
+.navigation ul > li:hover, .navigation > li:active{
     color: black;
     background: #BFC0C0;
 }
