--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -7,6 +7,7 @@
     padding: 1em;
     margin-right: auto;
     margin-left: auto;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .header{
@@ -38,12 +39,40 @@
     margin-top: 1em;
 }
 
+.staff_nr{
+    display: flex;
+    flex-direction: row;
+    padding: 1em 1em 2em 0;
+}
+
+.user_name_in{
+    margin-left: 1em;
+} 
+
+.save_button{
+    position: relative;
+    left: 0%;
+    padding: 1em 2em;
+    font-size: 10pt;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold; 
+    color: white;
+    background:#14489f;
+}
+
+.save_button:hover, .save_button:active{
+    color: white;
+    background:#333;
+
+}
+
 .button_history{
     position: relative;
     left: 70%;
     padding: 2em;
     margin-top: 3em;
     font-size: 10pt;
+    font-weight: bold; 
     font-family: 'Montserrat', sans-serif;
     color: white;
     background:#14489f;
@@ -51,8 +80,8 @@
 }
 
 .button_history:hover, .button_history:active{
-    color: black;
-    background:#82b6ff;
+    color: white;
+    background:#333;
 
 }
 
