--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar-style.css
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar-style.css
@@ -8,6 +8,7 @@
     padding: 1em;
     margin-right: auto;
     margin-left: auto;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .header{
@@ -25,7 +26,7 @@
 .settings{
     display: flex;
     flex-direction: column;
-    padding: 5em 1em;
+    padding: 2em 1em;
 }
 
 .settings span{
