--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -21,6 +21,21 @@
     padding: 1em;
 }
 
+.main{
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+    position: absolute;
+    max-width: 48em;
+    width: 100%;
+    height: 70%;
+}
+
+.main::-webkit-scrollbar{
+    display: none;
+}
+
 .car_description{
     display: flex;
     font-family: 'Montserrat', sans-serif;
