--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -22,6 +22,21 @@
     padding: 1em;
 }
 
+.main{
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+    position: absolute;
+    max-width: 48em;
+    width: 100%;
+    height: 65%;
+}
+
+.main::-webkit-scrollbar{
+    display: none;
+}
+
 .tool_description{
     display: flex;
 
