--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -30,7 +30,7 @@
     position: absolute;
     max-width: 48em;
     width: 100%;
-    height: 65%;
+    height: 70%;
 }
 
 .main::-webkit-scrollbar{
@@ -52,6 +52,16 @@
     height: 300px;
     float: right;
     margin-top: 1em;
+}
+
+.available{
+    padding-top: 3em;
+    color: green;
+}
+
+.not_available{
+    padding-top: 3em;
+    color: red;
 }
 
 .staff_nr{
@@ -76,6 +86,23 @@
 }
 
 .save_button:hover, .save_button:active{
+    color: white;
+    background:#333;
+
+}
+
+.return_button{
+    position: relative;
+    left: 0%;
+    padding: 1em 2em;
+    font-size: 10pt;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold; 
+    color: white;
+    background:#9f1414;
+}
+
+.return_button:hover, .return_button:active{
     color: white;
     background:#333;
 
