--- a/Lokaverkefni_2019/vefsiða/index-style.css
+++ b/Lokaverkefni_2019/vefsiða/index-style.css
@@ -79,6 +79,21 @@
 
 }
 
+.dropdown_remove{
+    display: none;
+}
+
+.remove_button{
+    position: relative;
+    left: 0%;
+    padding: 1em 2em;
+    margin: 0 0 2em 0;
+    font-size: 10pt;
+    font-weight: bold; 
+    color: white;
+    background:#9f1414;
+}
+
 .searchbar{
     width: 100%;
     margin: 1em 0 0 0;
