--- a/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir-style.css
@@ -29,14 +29,13 @@
 }
 
 .add_remove .add{
-    padding: 1em 2em;
-    width: 25%;
-    margin: 2% 50% 0% 0;
+    width: 30%;
+    margin: 2% 40% 0% 0;
 }
 
 .add_remove .remove{
     padding: 1em 2em;
-    width: 25%;
+    width: 30%;
     margin: 2% 0 0% 0%;
 }
 
@@ -105,11 +104,12 @@ div a{
     color: black;
     background: #BFC0C0;
 }
+
 .navigation{
-    font-family: 'Montserrat', sans-serif;
+    display: block;
     background:#333;
     text-align: center;
-    position: fixed;
+    position: sticky;
     bottom: 1em;
     width: 100%;
     max-width: 48em;
@@ -126,7 +126,6 @@ div a{
     list-style-type: none;
     display: inline-block;
     padding: 5px 20px;
-    text-align: center;
     color: white;
     font-size: 18px;
     padding: 1.8em 2em;
@@ -138,6 +137,43 @@ div a{
 }
 
 .navigation ul > li:hover, .navigation > li:active{
+    color: black;
+    background: #BFC0C0;
+}
+
+.m_navigation{
+    display: none;
+    background:#333;
+    text-align: center;
+    position: sticky;
+    bottom: 1em;
+    width: 100%;
+    max-width: 48em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.m_navigation ul{
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr)
+}
+
+.m_navigation ul > li{
+    list-style-type: none;
+    color: white;
+    padding: 0.2em;    
+}
+
+.m_navigation .icon{
+    text-decoration: none;
+    margin-top: 0.5em;
+    height: 3em;
+    width: 3em;
+}
+
+.m_navigation ul > li:hover, .m_navigation > li:active{
     color: black;
     background: #BFC0C0;
 }
