--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -39,7 +39,6 @@
 
 .tool_description{
     display: flex;
-
 }
 
 .tool_description h1{
@@ -48,8 +47,8 @@
 }
 
 .tool_logo{
-    width: 300px;
-    height: 300px;
+    width: 50%;
+    height: 50%;
     float: right;
     margin-top: 1em;
 }
@@ -128,7 +127,7 @@
 }
 
 .navigation{
-    font-family: 'Montserrat', sans-serif;
+    display: block;
     background:#333;
     text-align: center;
     position: fixed;
@@ -160,6 +159,43 @@
 }
 
 .navigation ul > li:hover, .navigation > li:active{
+    color: black;
+    background: #BFC0C0;
+}
+
+.m_navigation{
+    display: none;
+    background:#333;
+    text-align: center;
+    position: sticky;
+    bottom: 1em;
+    width: 100%;
+    max-width: 48em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.m_navigation ul{
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr)
+}
+
+.m_navigation ul > li{
+    list-style-type: none;
+    color: white;
+    padding: 0.2em;    
+}
+
+.m_navigation .icon{
+    text-decoration: none;
+    margin-top: 0.5em;
+    height: 3em;
+    width: 3em;
+}
+
+.m_navigation ul > li:hover, .m_navigation > li:active{
     color: black;
     background: #BFC0C0;
 }
