--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar-style.css
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar-style.css
@@ -25,16 +25,16 @@
 
 .main{
     max-width: 100%;
+    height: 80%;
 }
 
 .settings{
     display: flex;
     flex-direction: column;
-    padding: 2em 1em;
 }
 
 .settings span{
-    font-size: 18pt;
+    font-size: 12pt;
     margin-right: 3em;
 }
 
@@ -51,13 +51,14 @@
 
 .user_name_in{
     justify-content: center;
+    font-size: 2pt;
 }
 
 .navigation{
-    font-family: 'Montserrat', sans-serif;
+    display: block;
     background:#333;
     text-align: center;
-    position: fixed;
+    position: sticky;
     bottom: 1em;
     width: 100%;
     max-width: 48em;
@@ -74,7 +75,6 @@
     list-style-type: none;
     display: inline-block;
     padding: 5px 20px;
-    text-align: center;
     color: white;
     font-size: 18px;
     padding: 1.8em 2em;
@@ -86,6 +86,43 @@
 }
 
 .navigation ul > li:hover, .navigation > li:active{
+    color: black;
+    background: #BFC0C0;
+}
+
+.m_navigation{
+    display: none;
+    background:#333;
+    text-align: center;
+    position: sticky;
+    bottom: 1em;
+    width: 100%;
+    max-width: 48em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.m_navigation ul{
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr)
+}
+
+.m_navigation ul > li{
+    list-style-type: none;
+    color: white;
+    padding: 0.2em;    
+}
+
+.m_navigation .icon{
+    text-decoration: none;
+    margin-top: 0.5em;
+    height: 3em;
+    width: 3em;
+}
+
+.m_navigation ul > li:hover, .m_navigation > li:active{
     color: black;
     background: #BFC0C0;
 }
