--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -19,13 +19,11 @@
     align-items: center;
     justify-content: left;
     font-size: 30pt;
-    font-family: 'Montserrat', sans-serif;
     padding: 1em;
 }
 
 .user_description{
     display: flex;
-    font-family: 'Montserrat', sans-serif;
     height: 100%;
 }
 
@@ -35,8 +33,8 @@
 }
 
 .user_logo{
-    width: 4em;
-    height: 4em;
+    width: 30%;
+    height: 30%;
     float: right;
     margin-top: 1em;
 }
@@ -47,7 +45,6 @@
     padding: 2em;
     margin-top: 3em;
     font-size: 10pt;
-    font-family: 'Montserrat', sans-serif;
     color: white;
     background:#14489f;
 
