--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -30,7 +30,7 @@
     position: absolute;
     max-width: 48em;
     width: 100%;
-    height: 70%;
+    height: 65%;
 }
 
 .main::-webkit-scrollbar{
@@ -39,6 +39,7 @@
 
 .tool_description{
     display: flex;
+
 }
 
 .tool_description h1{
@@ -47,26 +48,16 @@
 }
 
 .tool_logo{
-    width: 50%;
-    height: 50%;
+    width: 30%;
+    height: 30%;
     float: right;
     margin-top: 1em;
-}
-
-.available{
-    padding-top: 3em;
-    color: green;
-}
-
-.not_available{
-    padding-top: 3em;
-    color: red;
 }
 
 .staff_nr{
     display: flex;
     flex-direction: row;
-    padding: 1em 1em 2em 0;
+    padding: 1em 1em 1em 0;
 }
 
 .user_name_in{
@@ -90,28 +81,11 @@
 
 }
 
-.return_button{
-    position: relative;
-    left: 0%;
-    padding: 1em 2em;
-    font-size: 10pt;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold; 
-    color: white;
-    background:#9f1414;
-}
-
-.return_button:hover, .return_button:active{
-    color: white;
-    background:#333;
-
-}
-
 .button_history{
     position: relative;
     left: 70%;
     padding: 2em;
-    margin-top: 3em;
+    margin-top: 0.5m;
     font-size: 10pt;
     font-weight: bold; 
     font-family: 'Montserrat', sans-serif;
@@ -127,7 +101,7 @@
 }
 
 .navigation{
-    display: block;
+    font-family: 'Montserrat', sans-serif;
     background:#333;
     text-align: center;
     position: fixed;
@@ -159,43 +133,6 @@
 }
 
 .navigation ul > li:hover, .navigation > li:active{
-    color: black;
-    background: #BFC0C0;
-}
-
-.m_navigation{
-    display: none;
-    background:#333;
-    text-align: center;
-    position: sticky;
-    bottom: 1em;
-    width: 100%;
-    max-width: 48em;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.m_navigation ul{
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr)
-}
-
-.m_navigation ul > li{
-    list-style-type: none;
-    color: white;
-    padding: 0.2em;    
-}
-
-.m_navigation .icon{
-    text-decoration: none;
-    margin-top: 0.5em;
-    height: 3em;
-    width: 3em;
-}
-
-.m_navigation ul > li:hover, .m_navigation > li:active{
     color: black;
     background: #BFC0C0;
 }
