--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -22,6 +22,20 @@
     padding: 1em;
 }
 
+.main{
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+    max-width: 48em;
+    width: 100%;
+    height: 80%;
+}
+
+.main::-webkit-scrollbar{
+    display: none;
+}
+
 .user_description{
     display: flex;
     height: 100%;
