--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -60,10 +60,20 @@
     color: red;
 }
 
-.staff_nr{
+.maintenance{
+    display: block;
+}
+
+.maintenance_info{
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
     padding: 1em 1em 2em 0;
+}
+
+.maintenance_info >*{
+    flex: 1 1 30%;
+    margin-bottom: 1em;    
 }
 
 .user_name_in{
